# asm

./: .gitignore  CMakeLists.txt  README.md
.run/: All Tests.run.xml  bf (99_bottles.bf) (jit).run.xml  bf (99_bottles.bf).run.xml  bf (e.bf) (jit).run.xml  bf (e.bf).run.xml  bf (echo.bf) (jit).run.xml  bf (echo.bf).run.xml  bf (hello_world.bf) (jit).run.xml  bf (hello_world.bf).run.xml  bf (life.bf) (jit).run.xml  bf (life.bf).run.xml  bf (tic_tac_toe.bf) (jit).run.xml  bf (tic_tac_toe.bf).run.xml
examples/: CMakeLists.txt
examples/bf/: CMakeLists.txt  executor.cxx  executor.hxx  instruction.hxx  io.cxx  io.hxx  jit_compiler.cxx  jit_compiler.hxx  lexer.cxx  lexer.hxx  main.cxx  parser.cxx  parser.hxx  token.hxx
examples/bf/scripts/: e.bf  echo.bf  life.bf  tic_tac_toe.bf
specs/: adc.json  adcx.json  add.json  addpd.json  addps.json  addsd.json  addss.json  addsubpd.json  addsubps.json  adox.json  aesdec.json  aesdeclast.json  aesenc.json  aesenclast.json  aesimc.json  aeskeygenassist.json  and.json  andn.json  andnpd.json  andnps.json  andpd.json  andps.json  bextr.json  blendpd.json  blendps.json  blendvpd.json  blendvps.json  blsi.json  blsmsk.json  blsr.json  bndcl.json  bndcu_bndcn.json  bndldx.json  bndmk.json  bndmov.json  bndstx.json  bsf.json  bsr.json  bswap.json  bt.json  (+575 more)
src/: CMakeLists.txt  buffer.cxx  callable_unix.cxx  callable_win.cxx  instruction.cxx
src/include/asm/: buffer.hxx  callable.hxx  instruction.hxx  instruction_helper.hxx  memory.hxx  register.hxx  types.hxx
src/include/asm/instructions/: add_sub.hxx  all.hxx  bitwise.hxx  call.hxx  float.hxx  inc_dec.hxx  jmp.hxx  lea.hxx  leave.hxx  mov.hxx  push_pop.hxx  ret.hxx  test.hxx
test/: CMakeLists.txt  assembly_tests.cxx  callable_tests.cxx  register_tests.cxx
